--- a/studybud/base/templates/base/room.html
+++ b/studybud/base/templates/base/room.html
@@ -2,4 +2,14 @@
 
 {% block content %}
 <h1>{{room.name}}</h1>
+<p>{{room.description}}</p>
+<div class="commend">
+    <h3>Conversation</h3>
+    <hr>
+    {% for message in room_messages %}
+        <div>
+            <small>@{{message.user}}  {{message.created|timesince}} ago</small>
+        </div>
+    {% endfor %}
+</div>
 {% endblock %}
