--- a/studybud/base/templates/base/room.html
+++ b/studybud/base/templates/base/room.html
@@ -9,7 +9,18 @@
     {% for message in room_messages %}
         <div>
             <small>@{{message.user}}  {{message.created|timesince}} ago</small>
+            <p>{{message.body}}</p>
+            <hr>
         </div>
     {% endfor %}
 </div>
+
+{% if request.user.is_authenticated %}
+<div class="comment-form">
+    <form action="" method="POST">
+        {% csrf_token %}
+        <input type="text" name="body" placeholder="Write your message here...">
+    </form>
+</div>
+{% endif %}
 {% endblock %}
