--- a/studybud/base/templates/base/home.html
+++ b/studybud/base/templates/base/home.html
@@ -53,6 +53,10 @@
                 <small>replied to "{{message.room}}"</small>
 
                 <p>{{message}}</p>
+                {% if request.user == message.user %}
+                    <a href="{% url "delete-message" message.id %}">Delete</a>
+                {% endif %}
+                <hr>
             </div>
         {% endfor %}
     </div>
