--- a/studybud/base/templates/base/room_form.html
+++ b/studybud/base/templates/base/room_form.html
@@ -23,7 +23,7 @@
 
             <div class="form__group">
                 <label for="room_topic">Topic</label>
-                <input required type="text" name="topic" id="room_topic" list="topic-list" />
+                <input required type="text" value="{{room.topic}}" name="topic" id="room_topic" list="topic-list" />
                 <datalist id="topic-list">
                   <select id="room_topic">
                     {% for topic in topics %}
@@ -54,7 +54,7 @@
 
             <div class="form__action">
               <a class="btn btn--dark" href="{% url 'home' %}">Cancel</a>
-              <button class="btn btn--main" type="submit">Create Room</button>
+              <button class="btn btn--main" type="submit">Submit</button>
             </div>
           </form>
         </div>
